--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "react-dom": "^17.0.2",
     "react-icons": "^4.2.0",
     "react-image": "^4.0.3",
+    "react-loading-image": "^0.5.0",
     "react-scripts": "4.0.3",
     "web-vitals": "^1.1.1"
   },
